I managed to get this exercise correct, save for remembering to put margin and padding to 0 on some objects that I add padding to later. Also, I had put my cards as 'justify space evenly' and that made them go centered rather than wrap like I had wanted

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,69 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0 16px;
+  margin: 0;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;
+  padding: 16px;
 }
-
-.card {
+a{
+  font-size: 24px;
+  text-decoration: none;
+  color: white;
+}
+ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.card{
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 320px;
+  margin: 16px;
+  padding: 16px;
+}
+.content{
+  display: flex;
+  flex-grow: 1;
+}
+.boxes{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  /* flex-shrink: 1; */
+  padding: 32px;
+  /* justify-content: space-evenly; */
+
+  /* align-items: flex-start; */
 }
